Fix integration test to run in IDE. (#543)
1. Fix OMS and KernelServer exection handling in the integration test so it can run in Intellij.
2. Update closing order of KernelServer and OMS properly so that heartbeat doesn't throw exceptions in closing.